Fixed config to match requierments

--- a/Computer Networks/Ex03/config/config.ini
+++ b/Computer Networks/Ex03/config/config.ini
@@ -1,6 +1,6 @@
-## Config.ini file for the server to load config from.
+# Config.ini file for the server to load config from.
 
-PORT "8080"
-ROOT "c:\serverroot\"
-DEFAULT_PAGE "index.html"
-MAX_THREADS "10"
+port=8080
+root=c:\serverroot\
+defaultPage=index.html
+maxThreads=10
