Working further on responses

--- a/Computer Networks/Ex03/config/config.ini
+++ b/Computer Networks/Ex03/config/config.ini
@@ -1,6 +1,6 @@
 # Config.ini file for the server to load config from.
 
 port=8080
-root=c:\serverroot\
+root=/home/aviadh/c/wwwroot/
 defaultPage=index.html
 maxThreads=10
