--- a/DesignPatterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/FacebookIntegrationApp.csproj
+++ b/DesignPatterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/FacebookIntegrationApp.csproj
@@ -128,6 +128,10 @@
   <ItemGroup>
     <Resource Include="img\facebook-icon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Facebook.dll" />
+    <Content Include="FbGraphApiWrapper.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
