removed some unused stuff

--- a/DesignPatterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/FacebookIntegrationApp.csproj
+++ b/DesignPatterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/FacebookIntegrationApp.csproj
@@ -77,6 +77,8 @@
     <Compile Include="MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Photo.cs" />
+    <Compile Include="PhotoAlbum.cs" />
     <Compile Include="StatisticsView.xaml.cs">
       <DependentUpon>StatisticsView.xaml</DependentUpon>
     </Compile>
