added items to config

--- a/ComputerNetworks/Ex04/config/config.ini
+++ b/ComputerNetworks/Ex04/config/config.ini
@@ -6,3 +6,10 @@ defaultPage=index.html
 maxThreads=10
 # Socket timeout in ms
 socketTimeout=10000
+
+# Crawlers Config
+maxDownloaders=10
+maxAnalyzers=2
+imageExtensions=bmp, jpg, png, gif, ico
+videoExtensions=avi, mpg, mp4, wmv, mov, flv, swf, mkv
+documentExtensions=pdf, doc, docx, xls, xlsx, ppt, pptx
