--- a/ComputerNetworks/Ex04/config/config.ini
+++ b/ComputerNetworks/Ex04/config/config.ini
@@ -10,6 +10,6 @@ socketTimeout=10000
 # Crawlers Config
 maxDownloaders=10
 maxAnalyzers=2
-imageExtensions=bmp, jpg, png, gif, ico
+imageExtensions=bmp, jpg, png, gif, ico, jpeg
 videoExtensions=avi, mpg, mp4, wmv, mov, flv, swf, mkv
 documentExtensions=pdf, doc, docx, xls, xlsx, ppt, pptx
